# DeveloperHub_Intern

./: README.md
MallCustomerSegmentation/: README.md  eda.py  main.py  pyproject.toml  train_model.py
MallCustomerSegmentation/app/: main.py
MallCustomerSegmentation/model/: kmeans_model.joblib
sentiment_analysis/: README.md  pyproject.toml
sentiment_analysis/app/: main.py  preprocess.py  train.py
sentiment_analysis/models/: sentiment_model.pkl  vectorizer.pkl
