[project]
name = "sentiment-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "flask==2.3.2",
    "joblib==1.2.0",
    "matplotlib==3.7.1",
    "nltk==3.8.1",
    "numpy==1.24.3",
    "pandas==2.0.2",
    "scikit-learn==1.2.2",
    "seaborn==0.12.2",
]
